# bulletty

./: Cargo.toml
src/core/feed/: feedparser.rs  html.rs
