[package]
name = "bulletty"
version = "0.2.2"
description = "a pretty TUI feed reader (RSS+ATOM) that stores articles locally as Markdown files"
authors = [ "Bruno Croci <crocidb@gmail.com>" ]
license = "MIT"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/CrociDB/bulletty"
readme = "README.md"
homepage = "https://github.com/CrociDB/bulletty"
documentation = "https://docs.rs/bulletty"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
dirs = "6"
toml = "0.9.11"
serde = { version = "1.0.228", features = [ "derive" ] }
reqwest = { version = "0.13.2", features = [ "blocking", "rustls" ], default-features = false }
clap = { version = "4.5.57", features = [ "derive" ] }
roxmltree = "0.21.1"
slug = "0.1"
html2md-bulletty = { version = "0.2.15" }
regex = "1.12.3"
chrono = { version = "0.4", features = [ "serde" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-appender = "0.2"
tracing-error = "0.2"
unicode-width = "0.2.2"
open = "5.3.3"
fuzzt = { version = "0.3.1", default-features = false, features = ["levenshtein"] }
ansi-to-tui = { version = "8.0.1" }
document-features = { version = "0.2.12" }
itertools = "0.14.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.0"
rstest = "0.26.1"
syntect = { version = "5.3.0" }
url = "2.5.8"
html-escape = "0.2.13"
astral-tl = "0.7.11"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"

[dev-dependencies]
tempfile = "3.25.0"
indoc = "2.0.7"
tracing-subscriber = "0.3.22"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
